# opal-release-downloader

./: .pylintrc  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: pylint.yml
src/opal_release_downloader/: __main__.py  _constants.py  _date.py  _display.py  download.py  download_opal_artifacts.py  fetch.py  list.py  validate_opal_artifacts.py  verify.py
tests/: conftest.py  test_date.py  test_download.py  test_fetch.py  test_list.py  test_verify.py
