[metadata]
name = opal-release-downloader
version = 0.0.1
author = OPAL
author_email = author@example.com
description = Lookup and edit private, structured entries
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/IM-USAF/opal-release-downloader
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: POSIX :: Linux

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires = 
    pyyaml
    boto3
    awscli
    urllib3
    requests
    hashlib
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
opal-release-downloader = bin/*.sh

[options.entry_points]
console_scripts =
    download_opal_artifacts = opal_release_downloader:download_opal_artifacts.run_downloader
    validate_opal_artifacts = opal_release_downloader:validate_opal_artifacts.validate
