[metadata]
name = opal_release_downloader
version = 0.0.1
author = OPAL
author_email = IM-USAF
description = Download artifacts required to deploy an OPAL release
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/IM-USAF/opal-release-downloader
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: POSIX :: Linux
[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.9
install_requires = 
    pyyaml
    boto3
    awscli
    urllib3
    requests
include_package_data = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    download_opal_artifacts = opal_release_downloader:download_opal_artifacts.run_downloader
